# mail

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  RELEASING.md  rust-toolchain.toml
.claude/skills/freenet-mail-qa/: SKILL.md
.claude/skills/freenet-mail-release/: SKILL.md
.githooks/: pre-commit
.github/workflows/: build.yml  check-contract-wasm.yml  e2e-real-node.yml
common/: Cargo.toml
common/src/: facade.rs  lib.rs
contracts/facade/: Cargo.toml
contracts/facade-loader/: README.md
contracts/facade-loader/src/: index.html.tmpl
contracts/facade-types/: Cargo.toml
contracts/facade-types/src/: lib.rs
contracts/facade/src/: lib.rs
contracts/inbox/: Cargo.toml
contracts/inbox/src/: lib.rs
contracts/inbox/tests/: integration.rs
contracts/inbox/tests/common/: mod.rs
contracts/web-container/: Cargo.toml  freenet.toml
contracts/web-container/src/: lib.rs
docs/qa/: manual-test-inventory.md
modules/antiflood-tokens/contracts/token-allocation-record/: Cargo.toml
modules/antiflood-tokens/contracts/token-allocation-record/src/: lib.rs
modules/antiflood-tokens/contracts/token-allocation-record/tests/: test.rs
modules/antiflood-tokens/delegates/token-generator/: Cargo.toml
modules/antiflood-tokens/delegates/token-generator/src/: lib.rs  tests.rs
modules/antiflood-tokens/interfaces/: Cargo.toml
modules/antiflood-tokens/interfaces/src/: lib.rs
modules/identity-management/: Cargo.toml
modules/identity-management/src/: lib.rs
modules/mail-local-state/: Cargo.toml
modules/mail-local-state/src/: lib.rs
published-contract/: README.md  contract-id.txt  facade-id.txt  facade.parameters  facade.wasm  web_container_contract.wasm  webapp.parameters
scripts/: build-facade-snapshot-linux.sh  build-loader.sh  check-facade-byte-equal.sh  generate-production-key.sh  release.sh  run-isolated-nodes.sh  smoke-test-production.sh
test-contract/: README.md  web-container-keys.toml
test-contract/identity/: README.md  identity-manager-key.private.pem  identity-manager-key.public.pem
test-contract/mail-local-state/: README.md  mail-local-state-key.private.pem  mail-local-state-key.public.pem
tools/web-container-sign/: Cargo.toml
tools/web-container-sign/src/: main.rs
tools/web-container-sign/tests/: facade_integration.rs
ui/: Cargo.toml  Dioxus.toml  build.rs  index.html
ui/branding/: app.json  testids.json
ui/src/: aft.rs  api.rs  app.rs  contact_tier_cache.rs  inbox.rs  lib.rs  local_state.rs  log.rs  test_util.rs  testid.rs  toast.rs
ui/src/app/: address_book.rs  bob_card_fixture.txt  login.rs  settings.rs
ui/tests/: app-name.ts  compose-autocomplete.spec.ts  email-app.spec.ts  live-node.spec.ts  package-lock.json  package.json  playwright.config.ts  production-liveness.spec.ts  repro-106-107.spec.ts  testids.ts  threads-storybook.spec.ts  threads.spec.ts
