[workspace]
resolver = "2"
members = [
    "common",
    "ui",
    "contracts/*",
    "modules/antiflood-tokens/interfaces",
    "modules/antiflood-tokens/contracts/token-allocation-record",
    "modules/antiflood-tokens/delegates/token-generator",
    "modules/identity-management",
    "tools/web-container-sign",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Freenet
freenet-stdlib = "0.3.5"
# Internal
freenet-email-core = { path = "common" }
freenet-aft-interface = { path = "modules/antiflood-tokens/interfaces" }
identity-management = { path = "modules/identity-management" }
freenet-email-inbox = { path = "contracts/inbox" }
# Shared
bincode = "1"
bs58 = "0.5"
chrono = "0.4"
rsa = { version = "0.9.2", default-features = false, features = ["serde", "pem", "sha2"] }
# ML-DSA (CRYSTALS-Dilithium), NIST FIPS 204, level-3 parameter set (ML-DSA-65).
# Replacing RSA-PKCS#1 v1.5 signatures on inbox state deltas. See issue #18.
# 0.1.0-rc is the latest RustCrypto release; pinned here pending a 1.0.
# Uses rand_core 0.10 / signature 3.0 internally; do not add an older
# `signature = "2"` workspace dep — the trait versions won't match.
ml-dsa = { version = "0.1.0-rc.8", default-features = false, features = ["alloc", "rand_core"] }
# ML-KEM-768 (CRYSTALS-Kyber), NIST FIPS 203, level-3 parameter set.
# Replacing RSA-PKCS#1 v1.5 key encapsulation for message content encryption. See issue #18.
ml-kem = { version = "0.3.0-rc.2", default-features = false, features = ["getrandom"] }
serde = "1"
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
wasm-bindgen = "0.2"
dioxus = "0.7.3"
# Web-container deps (ported from freenet-river)
byteorder = "1.5.0"
ciborium = "0.2.2"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc", "serde"] }
rand = { version = "0.8.5", default-features = false }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = "abort"
