[workspace]
resolver = "2"
members = [
    "common",
    "ui",
    "contracts/*",
    "modules/antiflood-tokens/interfaces",
    "modules/antiflood-tokens/contracts/token-allocation-record",
    "modules/antiflood-tokens/delegates/token-generator",
    "modules/identity-management",
    "modules/mail-local-state",
    "tools/web-container-sign",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

[workspace.dependencies]
# Freenet
freenet-stdlib = "0.3.5"
# Internal
freenet-email-core = { path = "common" }
freenet-aft-interface = { path = "modules/antiflood-tokens/interfaces" }
identity-management = { path = "modules/identity-management" }
mail-local-state = { path = "modules/mail-local-state" }
freenet-email-inbox = { path = "contracts/inbox" }
# Shared
bincode = "1"
bs58 = "0.5"
# default-features = false to keep `clock` (and its js-sys/wasm-bindgen
# pull-in) out of contract WASMs. Cargo unifies features across the
# workspace, so any consumer that lets the default `clock` feature in
# poisons the inbox/aft contract builds with `__wbindgen_*` imports
# the Freenet runtime can't satisfy. Opt back into `clock`/`wasmbind`
# at the consumer level (e.g. UI) when needed.
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }
# ML-DSA (CRYSTALS-Dilithium), NIST FIPS 204, level-3 parameter set (ML-DSA-65).
# Replaced RSA-PKCS#1 v1.5 for inbox state-delta signatures and AFT token
# assignments (Stage 1 + Stage 4 of issue #18). 0.1.0-rc is the latest
# RustCrypto release; pinned here pending a 1.0. Uses rand_core 0.10 /
# signature 3.0 internally; do not add an older `signature = "2"` workspace
# dep — the trait versions won't match.
ml-dsa = { version = "0.1.0-rc.8", default-features = false, features = ["alloc", "rand_core"] }
# ML-KEM-768 (CRYSTALS-Kyber), NIST FIPS 203, level-3 parameter set.
# Replacing RSA-PKCS#1 v1.5 key encapsulation for message content encryption. See issue #18.
# ML-KEM without the getrandom feature — we use encapsulate_with_rng + a custom
# RNG adapter (Rand08Rng in inbox.rs) to avoid pulling in getrandom 0.4, which
# on wasm32-unknown-unknown needs wasm_js and conflicts with our getrandom 0.2 setup.
ml-kem = { version = "0.3.0-rc.2", default-features = false }
rand_core = "0.10"
hkdf = "0.12"
sha2 = { version = "0.10", default-features = false }
serde = "1"
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
wasm-bindgen = "0.2"
dioxus = "0.7.7"
# Web-container deps (ported from freenet-river)
byteorder = "1.5.0"
ciborium = "0.2.2"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc", "serde"] }
rand = { version = "0.8.5", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = "abort"
