[package]
name = "freenet-email-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ed25519-dalek = { workspace = true, default-features = false, features = ["alloc", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
