[package]
name = "freenet-email-ui"
version = "0.0.1"
edition = "2024"
publish = false
default-run = "app"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "app"

[dependencies]
bs58 = { workspace = true }
arc-swap = "1.6"
rand_chacha = "0.3"
chrono = { workspace = true, features = ["wasmbind"] }
dioxus = { workspace = true, features = ["web"] }
futures = "0.3"
rsa = { workspace = true }
ml-dsa = { workspace = true }
ml-kem = { workspace = true }
rand_core = { workspace = true }  # rand_core 0.10 for encapsulate_with_rng
chacha20poly1305 = "0.10"
hkdf = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
rand = { version = "0.8", features = ["std"] }

freenet-email-inbox = { workspace = true, features = ["wasmbind"] }
freenet-stdlib = { workspace = true, features = ["net"] }
freenet-aft-interface = { workspace = true }
identity-management = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.5"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3"
features = [
    "BinaryType",
    "Blob",
    "console",
    "ErrorEvent",
    "WebSocket",
    "Window"
]

[features]
default = ["use-node"]
# Seed the UI with mock identities and mock messages so it renders without
# any real Freenet state. Combine with `no-sync` for a fully offline build:
#   cargo make dev-example
example-data = []
# Skip the local-node WebSocket entirely. Orthogonal to `example-data` —
# enabling `no-sync` alone produces an empty UI; pair with `example-data`
# (and `--no-default-features`) for the offline dev loop.
no-sync = []
use-node = []
