[package]
name = "freenet-email-inbox"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["alloc", "serde"] }
freenet-stdlib = { workspace = true }
rsa = { workspace = true }
freenet-aft-interface = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Enable `std` (and transitively `getrandom` on `rand_core`) for host tests
# so `rsa::rand_core::OsRng` resolves. The library build keeps
# `default-features = false` because the wasm32 target has no `OsRng`.
rsa = { version = "0.9.2", features = ["std"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["freenet-main-contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []
wasmbind = ["chrono/wasmbind"]
