[package]
name = "freenet-email-inbox"
version = "0.0.1"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
chrono = { workspace = true }
freenet-stdlib = { workspace = true }
ml-dsa = { workspace = true }
freenet-aft-interface = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Re-enable `clock` for integration tests so `Utc::now()` is available.
# The contract WASM build never sees this — it's a dev-dep override on
# top of the lib's `default-features = false` workspace `chrono` dep.
chrono = { workspace = true, features = ["clock"] }
# ML-DSA keygen needs a `rand_core 0.10`-compatible `CryptoRng`. The
# easiest source is `getrandom::SysRng` wrapped in `UnwrapErr` to turn
# the fallible `TryRng` into an infallible `RngCore`. This is also the
# form ml-dsa's own docs use. `sys_rng` is behind a feature flag.
getrandom = { version = "0.4", features = ["sys_rng"] }
# Used by the test-helper module for deterministic 32-byte assignment hashes.
sha2 = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["freenet-main-contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []
wasmbind = ["chrono/wasmbind"]
