[package]
name = "freenet-aft-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
freenet-stdlib = { workspace = true }
rsa = { workspace = true, features = ["sha2"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
rand = "0.8"

[features]
contract = ["freenet-stdlib/contract"]
