[package]
name = "freenet-token-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { workspace = true }
bs58 = { workspace = true }
freenet-stdlib = { workspace = true }
ml-dsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

freenet-aft-interface = { path = "../../interfaces" }

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = { workspace = true, features = ["alloc", "serde"] }
freenet-stdlib = { workspace = true, features = ["contract"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
chrono = { workspace = true, features = ["clock", "alloc", "serde"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
arbitrary = "1"
chacha20poly1305 = "0.10"
rand = { version = "0.8", features = ["std"] }
rand_chacha = { version = "0.3" }
freenet-stdlib = { workspace = true, features = ["testing"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[lib]
crate-type = ["cdylib"]

[features]
# `freenet-main-delegate` emits the extern "C" FFI wrapper via the
# #[delegate] macro. Only valid when targeting wasm; enable explicitly via
# `fdev build` / cargo-make build-token-generator target.
default = []
freenet-main-delegate = []
